--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="387dp"
-        android:layout_height="220dp"
+        android:layout_width="402dp"
+        android:layout_height="246dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
@@ -57,7 +57,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/aldrich"
+        android:fontFamily="@font/athiti_medium"
         android:text="SMART STORAGE"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
@@ -72,7 +72,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/aldrich"
+        android:fontFamily="@font/athiti_medium"
         android:text="SYSTEM"
         android:textColor="#F8F1F1"
         android:textSize="36sp"
