--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/advent_pro_medium</item>
         <item>@font/advent_pro_thin</item>
         <item>@font/aldrich</item>
+        <item>@font/athiti_medium</item>
         <item>@font/cousine</item>
         <item>@font/karla</item>
     </array>
