--- a/app/src/main/res/layout/activity_availablebox.xml
+++ b/app/src/main/res/layout/activity_availablebox.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.59" />
 
     <TextView
-        android:id="@+id/backBtn"
+        android:id="@+id/btnback"
         android:layout_width="51dp"
         android:layout_height="37dp"
         app:layout_constraintBottom_toBottomOf="parent"
