--- a/app/src/main/res/layout/activity_availablebox2a.xml
+++ b/app/src/main/res/layout/activity_availablebox2a.xml
@@ -4,45 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/availablebox1"
-    tools:context=".availablebox">
-
-    <EditText
-        android:id="@+id/width1a"
-        android:layout_width="78dp"
-        android:layout_height="43dp"
-        android:ems="10"
-        android:inputType="phone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.78"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.59" />
+    android:background="@drawable/availablebox2"
+    tools:context=".availablebox2a">
 
     <TextView
-        android:id="@+id/btnback"
-        android:layout_width="51dp"
-        android:layout_height="37dp"
+        android:id="@+id/submitBtn2a"
+        android:layout_width="392dp"
+        android:layout_height="79dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.008"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.926" />
 
-    <EditText
-        android:id="@+id/productname1a"
-        android:layout_width="320dp"
-        android:layout_height="44dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+    <RadioGroup
+        android:layout_width="104dp"
+        android:layout_height="133dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.362"
+        app:layout_constraintHorizontal_bias="0.824"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.334" />
+        app:layout_constraintVertical_bias="0.764">
+
+        <RadioButton
+            android:id="@+id/radioButton7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Household" />
+
+        <RadioButton
+            android:id="@+id/radioButton8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Others" />
+    </RadioGroup>
 
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -80,31 +77,21 @@
             android:text="Medicine" />
     </RadioGroup>
 
-    <RadioGroup
-        android:layout_width="104dp"
-        android:layout_height="133dp"
+    <EditText
+        android:id="@+id/width2a"
+        android:layout_width="78dp"
+        android:layout_height="43dp"
+        android:ems="10"
+        android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.824"
+        app:layout_constraintHorizontal_bias="0.78"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.764">
-
-        <RadioButton
-            android:id="@+id/radioButton7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Household" />
-
-        <RadioButton
-            android:id="@+id/radioButton8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Others" />
-    </RadioGroup>
+        app:layout_constraintVertical_bias="0.59" />
 
     <EditText
-        android:id="@+id/high1a"
+        android:id="@+id/high2a"
         android:layout_width="78dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -116,27 +103,41 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.59" />
 
-    <TextView
-        android:id="@+id/submitBtn1a"
-        android:layout_width="392dp"
-        android:layout_height="79dp"
+    <EditText
+        android:id="@+id/amount2a"
+        android:layout_width="320dp"
+        android:layout_height="44dp"
+        android:ems="10"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintHorizontal_bias="0.362"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.926" />
+        app:layout_constraintVertical_bias="0.486" />
 
     <EditText
-        android:id="@+id/amount1a"
-        android:layout_width="312dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="328dp"
+        android:id="@+id/productname2a"
+        android:layout_width="320dp"
+        android:layout_height="44dp"
         android:ems="10"
-        android:inputType="phone"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.362"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.334" />
+
+    <TextView
+        android:id="@+id/backBtn"
+        android:layout_width="40dp"
+        android:layout_height="33dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
