--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -55,4 +55,16 @@
         app:sv_unitTextSize="1dp"
         app:sv_speedTextPosition="BOTTOM_CENTER"/>
 
+    <TextView
+        android:id="@+id/showinstock"
+        android:layout_width="96dp"
+        android:layout_height="37dp"
+        android:text="instock"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.701"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.773" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
