--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -9,7 +9,7 @@
     tools:context=".storage">
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/box2bar"
         android:layout_width="61dp"
         android:layout_height="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,10 +18,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.244"
-        app:srcCompat="@drawable/greenbar" />
+        app:srcCompat="@drawable/green" />
 
     <ImageView
-        android:id="@+id/imageView28"
+        android:id="@+id/box1bar"
         android:layout_width="61dp"
         android:layout_height="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.244"
-        app:srcCompat="@drawable/greenbar" />
+        app:srcCompat="@drawable/green" />
 
     <TextView
         android:id="@+id/box1"
