--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/order"
+    android:background="@drawable/neworder"
     tools:context=".order">
 
     <TextView
@@ -20,8 +20,8 @@
 
     <TextView
         android:id="@+id/sendorder"
-        android:layout_width="392dp"
-        android:layout_height="75dp"
+        android:layout_width="409dp"
+        android:layout_height="73dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
