--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -7,5 +7,6 @@
         <item>@font/athiti_medium</item>
         <item>@font/cousine</item>
         <item>@font/karla</item>
+        <item>@font/poppins</item>
     </array>
 </resources>
