--- a/app/src/main/res/layout/activity_info2a.xml
+++ b/app/src/main/res/layout/activity_info2a.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/information2"
+    android:background="@drawable/newinfo2"
     tools:context=".info2a">
 
     <TextView
         android:id="@+id/orderBtn2a"
-        android:layout_width="386dp"
-        android:layout_height="73dp"
+        android:layout_width="412dp"
+        android:layout_height="74dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -28,6 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022" />
+
     <com.github.anastr.speedviewlib.PointerSpeedometer
         android:id="@+id/pointerSpeedometer"
         android:layout_width="153dp"
@@ -51,6 +52,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.382"
-        app:sv_unitTextSize="1dp"
-        app:sv_speedTextPosition="BOTTOM_CENTER"/>
+        app:sv_speedTextPosition="BOTTOM_CENTER"
+        app:sv_unitTextSize="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
