--- a/app/src/main/res/layout/activity_availablebox2a.xml
+++ b/app/src/main/res/layout/activity_availablebox2a.xml
@@ -7,27 +7,16 @@
     android:background="@drawable/newavailablebox2"
     tools:context=".availablebox2a">
 
-    <TextView
-        android:id="@+id/submitBtn2a"
-        android:layout_width="392dp"
-        android:layout_height="79dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.926" />
-
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="116dp"
-        android:layout_height="133dp"
+        android:layout_width="113dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.552"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.787">
+        app:layout_constraintVertical_bias="0.792">
 
         <RadioButton
             android:id="@+id/radioButton"
@@ -55,14 +44,14 @@
     </RadioGroup>
 
     <RadioGroup
-        android:layout_width="104dp"
-        android:layout_height="133dp"
+        android:layout_width="103dp"
+        android:layout_height="122dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintHorizontal_bias="0.863"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.787">
+        app:layout_constraintVertical_bias="0.784">
 
         <RadioButton
             android:id="@+id/radioButton7"
@@ -77,8 +66,19 @@
             android:text="Others" />
     </RadioGroup>
 
+    <TextView
+        android:id="@+id/submitBtn2a"
+        android:layout_width="392dp"
+        android:layout_height="79dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.926" />
+
     <EditText
-        android:id="@+id/width2a"
+        android:id="@+id/length2a"
         android:layout_width="50dp"
         android:layout_height="30dp"
         android:background="#FFFFFF"
@@ -111,10 +111,10 @@
         android:layout_height="31dp"
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.415"
+        app:layout_constraintHorizontal_bias="0.355"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.48" />
@@ -128,7 +128,7 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.415"
+        app:layout_constraintHorizontal_bias="0.355"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.335" />
