--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -8,6 +8,34 @@
     tools:context=".info">
 
     <TextView
+        android:id="@+id/categoty1A"
+        android:layout_width="147dp"
+        android:layout_height="37dp"
+        android:fontFamily="@font/poppins"
+        android:text="category"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.863"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.677" />
+
+    <TextView
+        android:id="@+id/name1A"
+        android:layout_width="144dp"
+        android:layout_height="35dp"
+        android:fontFamily="@font/poppins"
+        android:text="name1A"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.602" />
+
+    <TextView
         android:id="@+id/btnback"
         android:layout_width="46dp"
         android:layout_height="42dp"
@@ -56,15 +84,17 @@
         app:sv_unitTextSize="1dp" />
 
     <TextView
-        android:id="@+id/showinstock"
+        android:id="@+id/showinstock1A"
         android:layout_width="96dp"
         android:layout_height="37dp"
+        android:fontFamily="@font/poppins"
         android:text="instock"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.701"
+        app:layout_constraintHorizontal_bias="0.723"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.778" />
+        app:layout_constraintVertical_bias="0.766" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
